+ =feature=
  + =file-templates= Disable file templates for .dir-locals.el files.
  + =jump= New command ~+jump/online-select~, which is like ~+jump/online~, but
    will always prompt for which provider to use.
+ =ui=
  + =doom= This module no longer sets a default font. This is left to the user
    to set in their own private module. Use ~(set! :font "Font Name" :size N)~
    to do so.
+ =lang=
  + =sh=
    + Improve how variables and subshells in double-quoted strings are
      fontified.
    + Fix imenu not recognizing functions with dashes in their names.
  + =java=
    + Polished meghanada-mode integration.
    + New (and optional) +eclim submodule and module flag.
  + =rust=
    + Now checks the ~RUST_SRC_PATH~ environment variable before looking for
      Rust's source in ~+rust-src-dir~.
    + Now looks for a ~racer~ binary in ~PATH~ before looking in
      ~+rust-src-dir~.

* 2.0.6 (Oct 05, 2017)
+ *Module changes:*
  + Add =lang/ledger=
  + Add =ui/vi-tilde-fringe= -- used to be in =core-ui=; indicates beyond-EOB,
    using tildes in the fringe (inspired by vim).
  + Add =feature/services= -- used to be =tools/prodigy=. Adds a way of managing
    external processes and services.
  + Add =tools/make= -- for running project Makefile commands from Emacs.
  + Add =tools/imenu= -- adds a sidebar for imenu (~imenu-list~), and a way of
    jumping to imenu entries across all open buffers (~imenu-anywhere~).
  + Move =feature/hydra= into =core-keybinds=.
  + Rename =feature/debug= to =feature/debugger= (and disabled it by default; it
    is currently unstable and needs some work).
  + Remove =org/org-notebook=. It was unused and too small to warrant its own
    module. Useful tidbits were merged into =org/org=.
+ =general=
  + =Makefile=
    + Fix ~make update~ to work even if Doom is installed somewhere other than
      ~\~/.emacs.d~ (see [[https://github.com/hlissner/doom-emacs/issues/190][#190]]).