@@ -1,5 +1,6 @@
 ;; -*- no-byte-compile: t; -*-
 ;;; lang/crystal/packages.el
 
-(package! crystal-mode :recipe (:fetcher github :repo "dotmilk/emacs-crystal-mode"))
+(package! crystal-mode)
+(package! flycheck-crystal)
 
